Quartz sync: Dec 9, 2025, 1:52 AM

--- a/content/Certs and Acreditation/CEU Points/Modern Threat Hunting Series/2. Threat Hunting Practices.md
+++ b/content/Certs and Acreditation/CEU Points/Modern Threat Hunting Series/2. Threat Hunting Practices.md
@@ -22,3 +22,5 @@ Trainer:[Paula Januszkiewicz](https://www.linkedin.com/learning/instructors/paul
 - **Monitor and Log Activity**
 
 # Persistence
+Threat actors will do their best to maintain control with the exploted machine. On Windows one of the tools we can use to investigate autoRuns path, schedule tasks is a Microsoft/SysInternals tool call [AutoRuns](https://learn.microsoft.com/en-us/sysinternals/downloads/autoruns) by Mark Russinovich
+![[Pasted image 20250909000418.png]]
